force-app/main/default/objects/AdaSettings__c/AdaSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>AdaSettings</label>
</CustomObject>