force-app/main/default/objects/AdaSettings__c/fields/BlockfrostProjectId__c.field-meta.xml
<CustomField>
    <fullName>BlockfrostProjectId__c</fullName>
    <description>The Blockfrost Project ID for Cardano API integration.</description>
    <label>Blockfrost Project ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>