force-app/main/default/objects/AdaSettings__c/fields/Hmac_Key__c.field-meta.xml
<CustomField>
    <fullName>Hmac_Key__c</fullName>
    <label>Hmac Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>