force-app/main/default/objects/AdaSettings__c/fields/Private_Key__c.field-meta.xml
<CustomField>
    <fullName>Private_Key__c</fullName>
    <label>Private Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>