force-app/main/default/objects/AdaSettings__c/fields/Transaction_approvals_enabled__c.field-meta.xml
<CustomField>
    <fullName>Transaction_approvals_enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transaction approvals enabled</label>
    <type>Checkbox</type>
</CustomField> 